syntax = "proto3";

package bidirect;

option go_package = "proto/bidirect";

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetEveryoneRequest {
	Greeting greet = 1;
}

message GreetEveryoneResponse {
	string result = 1;
}

service GreetEveryoneService {
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}